Light sources, locked doors, more items and scenery
I’ve added light sources, solving the and completing the first puzzle
of the game (once the player turns on the power). Currently, I am in
the process of adding more items and scenery to the game. I will add
the descriptions later.

--- a/Control Freak.inform/Index/Details/77_A.html
+++ b/Control Freak.inform/Index/Details/77_A.html
@@ -638,6 +638,8 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr><b>Activate lever</b>&nbsp;<a href="source:story.ni#line55"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Activate lever </b>&nbsp;<a href="source:story.ni#line55"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_activate_lever></a> (<i>past tense</i> )<br>
+    <hr><b>Activating</b>&nbsp;<a href="source:story.ni#line70"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Activating <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line70"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_activating></a> (<i>past tense</i> activated)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
-    <p class="hangingin2">&quot;pull/drag lever&quot;&nbsp;<a href="source:story.ni#line56"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">&quot;activate [something]&quot;&nbsp;<a href="source:story.ni#line71"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">after&nbsp;&nbsp;&nbsp;&nbsp;<i>activating lever</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line72"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
+    <br>
