--- a/Control Freak.inform/Index/Details/77_A.html
+++ b/Control Freak.inform/Index/Details/77_A.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<353;i++) {
+            for (var i=0;i<355;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -638,8 +638,12 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr><b>Activating</b>&nbsp;<a href="source:story.ni#line70"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Activating <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line70"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_activating></a> (<i>past tense</i> activated)<br>
+    <hr><b>Activating</b>&nbsp;<a href="source:story.ni#line72"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing&nbsp;<a href="source:story.ni#line85"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing with&nbsp;<a href="source:story.ni#line90"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Activating <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line72"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_activating></a> (<i>past tense</i> activated)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
-    <p class="hangingin2">&quot;activate [something]&quot;&nbsp;<a href="source:story.ni#line71"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
-    <p class="hangingin2">after&nbsp;&nbsp;&nbsp;&nbsp;<i>activating lever</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line72"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
+    <p class="hangingin2">&quot;activate [something]&quot;&nbsp;<a href="source:story.ni#line73"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">after&nbsp;&nbsp;&nbsp;&nbsp;<i>activating lever</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line74"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
     <br>
+    <!--CONTENT ENDS-->
+    </font>
+</body>
+</html>
