--- a/Control Freak.inform/Index/Details/77_A.html
+++ b/Control Freak.inform/Index/Details/77_A.html
@@ -638,10 +638,10 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr><b>Activating</b>&nbsp;<a href="source:story.ni#line72"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing&nbsp;<a href="source:story.ni#line85"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing with&nbsp;<a href="source:story.ni#line91"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Activating <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line72"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_activating></a> (<i>past tense</i> activated)<br>
+    <hr><b>Playing</b>&nbsp;<a href="source:story.ni#line86"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing with&nbsp;<a href="source:story.ni#line92"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Playing <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line86"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_playing></a> (<i>past tense</i> played)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
-    <p class="hangingin2">&quot;activate [something]&quot;&nbsp;<a href="source:story.ni#line73"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
-    <p class="hangingin2">after&nbsp;&nbsp;&nbsp;&nbsp;<i>activating lever</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line74"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
+    <p class="hangingin2">&quot;play [something]&quot;&nbsp;<a href="source:story.ni#line87"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">after&nbsp;&nbsp;&nbsp;&nbsp;<i>playing arcade machine</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line88"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
     <br>
     <!--CONTENT ENDS-->
     </font>
