--- a/Control Freak.inform/Index/Details/79_A.html
+++ b/Control Freak.inform/Index/Details/79_A.html
@@ -276,7 +276,7 @@
             }
         }
         function showAllResp() {
-            for (var i=0;i<355;i++) {
+            for (var i=0;i<357;i++) {
                 showResp('extra'+(1000000+i), 'plus'+(1000000+i));
             }
         }
@@ -638,8 +638,8 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr>Activating&nbsp;<a href="source:story.ni#line72"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing&nbsp;<a href="source:story.ni#line87"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>Playing with</b>&nbsp;<a href="source:story.ni#line93"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Playing with <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line93"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A79_playing_with></a> (<i>past tense</i> played with)<br>
+    <hr>Playing&nbsp;<a href="source:story.ni#line94"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing with&nbsp;<a href="source:story.ni#line100"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>Talking to</b>&nbsp;<a href="source:story.ni#line154"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Talking to <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line154"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A79_talking_to></a> (<i>past tense</i> talked to)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
-    <p class="hangingin2">&quot;play with [something]&quot;&nbsp;<a href="source:story.ni#line94"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
-    <p class="hangingin2">after&nbsp;&nbsp;&nbsp;&nbsp;<i>playing with cheat codes</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line95"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
+    <p class="hangingin2">&quot;talk to [someone]&quot;&nbsp;<a href="source:story.ni#line155"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>talking to The Banished One</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line157"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
     <br>
