--- a/Control Freak.inform/Index/Details/80_A.html
+++ b/Control Freak.inform/Index/Details/80_A.html
@@ -638,12 +638,8 @@
     A single action in detail.<br><i>About the action rulebooks&nbsp;&nbsp;<a href=inform:/doc178.html><img border=0 src=inform:/doc_images/help.png></a></i></p>
     </td>
     </tr></table>
-    <hr><b>Playing</b>&nbsp;<a href="source:story.ni#line170"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing with&nbsp;<a href="source:story.ni#line176"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Talking to&nbsp;<a href="source:story.ni#line252"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Playing <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line170"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A77_playing></a> (<i>past tense</i> played)<br>
+    <hr>Switch&nbsp;<a href="source:story.ni#line167"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=77_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing&nbsp;<a href="source:story.ni#line171"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=78_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, Playing with&nbsp;<a href="source:story.ni#line177"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=79_A.html><img border=0 src=inform:/doc_images/Beneath.png></a>, <b>Talking to</b>&nbsp;<a href="source:story.ni#line244"><img border=0 src=inform:/doc_images/Reveal.tif></a>&nbsp;<a href=80_A.html><img border=0 src=inform:/doc_images/Beneath.png></a><p><hr><p><b>Talking to <font color="#000080">something</font> </b>&nbsp;<a href="source:story.ni#line244"><img border=0 src=inform:/doc_images/Reveal.tif></a><a name=A80_talking_to></a> (<i>past tense</i> talked to)<br>
     <p><hr><p><b>Typed commands leading to this action</b><p>
-    <p class="hangingin2">&quot;play [something]&quot;&nbsp;<a href="source:story.ni#line171"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
-    <p class="hangingin2">after&nbsp;&nbsp;&nbsp;&nbsp;<i>playing arcade machine</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line172"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
+    <p class="hangingin2">&quot;talk to [someone]&quot;&nbsp;<a href="source:story.ni#line245"><img border=0 src=inform:/doc_images/Reveal.tif></a></p><p><b>Rules controlling this action</b></p><p>
+    <p class="hangingin2">instead of&nbsp;&nbsp;&nbsp;&nbsp;<i>talking to The Banished One</i>&nbsp;&nbsp;&nbsp;<a href="source:story.ni#line247"><img border=0 src=inform:/doc_images/Reveal.tif></a></p>
     <br>
-    <!--CONTENT ENDS-->
-    </font>
-</body>
-</html>
